Push context as thread default context if it isn't already

Works around gnome bug:
https://bugzilla.gnome.org/show_bug.cgi?id=646957